2007-07-09  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Stupid typo damn.

2007-07-07  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Monodoc.Editor.Utils/EcmaReader.cs: Minor changes to deal with
	  compiler warnings.

2007-07-06  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added more comments to
	  code, and added more cases to format some elements.

2007-07-06  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added two new methods
	  to handle the deserialization of the attributes of the elements
	  "Member" and "MemberSignature".

2007-07-04  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MIT.X11, AUTHORS, NEWS, README: Adding and moving basic files.
	* Monodoc.Editor/app.desktop: Add .desktop file.
	* Packages.mdse, Monodoc.Editor.mds: Minor changes.

2007-07-04  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added method AddPadding
	  that add a space in the buffer that is invisible so that certain
	  elements (like empty ones) are conserved.

2007-07-04  Hector E. Gomez Morales. <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Huge refactoring of
	  Serialize created three methods for each case. InsertStartElement
	  when we encounter the start of an element, InsertText when we
	  encounter Text, InsertEndElement when we encounter the end of an
	  element.

2007-07-01  Hector E. Gomez Morales <hectoregm@gmail.com> 

	

2007-06-29  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added a padding between
	  empty elements.
	* Monodoc.Editor.Gui/DocumentTagTable.cs: Added almost all the tags
	  that represents elements and attributes used by monodoc.

2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Using