@@ -23,6 +23,8 @@ namespace Monodoc.Editor {
         
         private Gtk.Action SaveAs;
         
+        private Gtk.Action CloseFile;
+        
         private Gtk.VBox vbox1;
         
         private Gtk.MenuBar menubar1;
@@ -57,6 +59,9 @@ namespace Monodoc.Editor {
             this.SaveAs.Sensitive = false;
             this.SaveAs.ShortLabel = Mono.Unix.Catalog.GetString("Save _As");
             w2.Add(this.SaveAs, null);
+            this.CloseFile = new Gtk.Action("CloseFile", Mono.Unix.Catalog.GetString("_Close File"), null, "gtk-close");
+            this.CloseFile.ShortLabel = Mono.Unix.Catalog.GetString("_Close File");
+            w2.Add(this.CloseFile, null);
             w1.InsertActionGroup(w2, 0);
             this.AddAccelGroup(w1.AccelGroup);
             this.Name = "Monodoc.Editor.EditorWindow";
@@ -68,7 +73,7 @@ namespace Monodoc.Editor {
             this.vbox1.Name = "vbox1";
             this.vbox1.Spacing = 3;
             // Container child vbox1.Gtk.Box+BoxChild
-            w1.AddUiFromString("<ui><menubar name='menubar1'><menu action='File'><menuitem action='Open'/><separator/><menuitem action='Save'/><menuitem action='SaveAs'/><separator/><menuitem action='Quit'/></menu></menubar></ui>");
+            w1.AddUiFromString("<ui><menubar name='menubar1'><menu action='File'><menuitem action='Open'/><separator/><menuitem action='Save'/><menuitem action='SaveAs'/><separator/><menuitem action='CloseFile'/><separator/><menuitem action='Quit'/></menu></menubar></ui>");
             this.menubar1 = ((Gtk.MenuBar)(w1.GetWidget("/menubar1")));
             this.menubar1.Name = "menubar1";
             this.vbox1.Add(this.menubar1);
@@ -123,6 +128,7 @@ namespace Monodoc.Editor {
             this.Open.Activated += new System.EventHandler(this.OnOpenActivated);
             this.Save.Activated += new System.EventHandler(this.OnSaveActivated);
             this.SaveAs.Activated += new System.EventHandler(this.OnSaveAsActivated);
+            this.CloseFile.Activated += new System.EventHandler(this.OnCloseFileActivated);
         }
     }
 }
